syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.overlead.gRPC";
option java_outer_classname = "productbacklog";
option objc_class_prefix = "pb";
package productbacklog;

service ProductBacklog{
    rpc addNewProductBacklog(AddNewProductBacklogReq) returns (ProductBacklogRes) {}
    rpc updateUserStory(UpdateProductBacklogReq) returns (ProductBacklogRes){}
    rpc deleteProductBacklog(DeleteProductBacklogReq) returns (ProductBacklogRes){}
	rpc sendToSprintBacklog(SendToSprintBacklogReq) returns (ProductBacklogRes){}
	rpc getAllProductBacklog(GetAllProductBacklogReq) returns (stream GetAllProductBacklogRes){}
}

message AddNewProductBacklogReq{
    string requesterId = 1;
	string projectId = 2;
	string role = 3;
	string want = 4;
	string so = 5;
	string statusBacklog = 6;										//alway status="todo" when add productbacklog
	string priority = 7;
	string estimation = 8;
	string sprintId = 9;
	string cookie = 10;
}
message ProductBacklogRes{
	string error = 1;
	string status = 2;
	string productBacklogId = 3;

}

message UpdateProductBacklogReq{
	string requesterId = 1;
	string projectId = 2;
	string productBacklogId = 3;
	string role = 4;
	string want = 5;
	string so = 6;
	string status = 7;									//alway status="todo" when add productbacklog
	string priority = 8;
	string estimation = 9;
	string sprint = 10;	
	string cookie = 11;
}

message DeleteProductBacklogReq{
    string requesterId = 1;
    string projectId = 2;
	string productBacklogId = 3;
	string cookie = 4;
}


message SendToSprintBacklogReq{	//lay tat ca gia tri cua productbacklog dc chon gan qua sprint backlog dong thoi gan status cua no thanh inprogress
    string requesterId = 1;
    string projectId = 2;
	string productBacklogId = 3;
	string start = 4;		 //return in form mm/hh/dd/mm/yyyy       phut/gio/ngay/thang/nam
	string deadline = 5;			//return in form mm/hh/dd/mm/yyyy 	
	string cookie = 6;
}


message GetAllProductBacklogReq{
    string requesterId = 1;
	string projectId = 2;
	string cookie = 3;
}
message GetAllProductBacklogRes{
	string productBacklogId = 2;
	string role = 3;
	string want = 4;
	string so = 5;
	string statusBacklog=11;
	string status = 9;
	string error=1;
	string priority = 6;
	string estimation = 7;
	string sprintId = 8;
}